# waybar-docker

./: Cargo.toml  README.md
src/: main.rs
