[package]
name = "waybar-docker"
version = "0.1.1"
edition = "2024"
description = "A docker module for waybar that works for me."
license = "MIT OR Apache-2.0"
repository = "https://github.com/kloki/waybar-docker"

[dependencies]
bollard = "0.19.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
